<resources>
    <string name="app_name" translatable="false">Spin Wheel</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this Spin Wheel, would \nyou mind rating us on the Google Play, then?</string>

    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="report_bugs_and_tell_us_what_to_improve">Report bugs and tell us what to improve</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="request">Request or feedback</string>
    <string name="send_email">Send by email&#8230;</string>
    <string name="email_clients_not_found">Not found any Email client</string>
    <string name="version">Version 1.0.0</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="are_you_sure_want_to_quit_app">Are you sure want to quit app?</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="loading">Loading</string>
    <string name="camera_is_not_available">Camera is not available!</string>
    <string name="external_directory_is_not_available">External directory is not available!</string>
    <string name="microphone_access">Microphone Access</string>
    <string name="this_app_needs_access_to_the_microphone_to_talk_and_ask_now">This app needs access to the Microphone to talk and ask now.</string>

    <string name="please_select_a_language">Please select a language!</string>
    <string name="settings">Settings</string>

    <string name="reset">Reset</string>

    <string name="intro_1_title">Spin the wheel for making decisions</string>
    <string name="intro_2_title">Text your luck with coin flip</string>
    <string name="intro_3_title">Pick and win with number choose</string>
    <string name="languages">LANGUAGES</string>
    <string name="next_up">NEXT</string>
    <string name="spin_the_wheel">SPIN The WHEEL</string>
    <string name="add_wheel">ADD WHEEL</string>
    <string name="no_spin_wheel_in_here">No spin wheel in here.</string>
    <string name="coin_flip">Coin Flip</string>
    <string name="lucky_number">Lucky Number</string>
    <string name="delete_">Delete?</string>
    <string name="are_you_sure_you_want_to_delete_this_wheel">Are you sure you want to delete this wheel?</string>
    <string name="okay">Okay</string>
    <string name="discard_changes">Discard Changes?</string>
    <string name="you_have_unsaved_changes_are_you_sure_you_want_to_discard_all">You have unsaved changes. Are you sure you want to discard all?</string>
    <string name="keep">Keep</string>
    <string name="discard">Discard</string>
    <string name="edit">Edit</string>
    <string name="option_1">Option 1</string>
    <string name="color">Color</string>
    <string name="spin">Spin</string>
    <string name="edit_wheel">Edit Wheel</string>
    <string name="click_coin_to_start">Click Coin to Start</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="repetition">Repetition</string>
    <string name="numbers_quantity">Numbers Quantity</string>
    <string name="go">Go</string>
    <string name="click_go_to_generate_numbers">Click GO to generate numbers</string>
    <string name="copy">COPY</string>
    <string name="please_wait">Please wait!</string>
    <string name="please_enter_range">Please enter range!</string>
    <string name="numbers_quantity_must_be_less_than_the_range_provided_when_the_repetition_is_unchecked">Numbers quantity must be less than the range provided when the repetition is unchecked</string>
    <string name="the_from_number_must_be_less_than_the_to_number">Range is incorrect order. The begin number must be less than the end number!</string>
    <string name="spin_">Spin:</string>
    <string name="used">Used:</string>
    <string name="wheel_color">Wheel Color</string>
    <string name="standard">Standard</string>
    <string name="six_color">Six Color</string>
    <string name="vintage">Vintage</string>
    <string name="two_color">Two Color</string>
    <string name="choose_wheel_color">Choose Wheel Color</string>
    <string name="sections">Sections</string>
    <string name="add">Add</string>
    <string name="name_of_wheel">Name of wheel</string>
    <string name="preview">Preview</string>
    <string name="spin_time">Spin time</string>
    <string name="font_size">Font size</string>
    <string name="repeat_option">Repeat Option</string>
    <string name="option">Option</string>
    <string name="pastel">Pastel</string>
    <string name="delete_wheel">Delete Wheel</string>
    <string name="top_wheel">Top Wheel</string>
    <string name="duplicated_wheel">Duplicate Wheel</string>
    <string name="add_at_least_2_slices_to_make_the_wheel">Add at least 2 slices to make the wheel.</string>
    <string name="enter_name_of_wheel">Enter name of Wheel</string>
    <string name="winner">Winner</string>
    <string name="hide">Hide</string>
    <string name="please_keep_at_least_two_slice_to_the_wheel">Please keep at least two slice to the wheel</string>
    <string name="maximum_slice_is_24_repeat_option_is_not_exceed_1_now">Maximum slice is 24, repeat option is not exceed 1 now</string>
    <string name="add_some_slice_first">Add some slice first!</string>
    <string name="maximum_slice_is_24">Maximum slice is 24</string>
    <string name="copy_success">Copy success</string>
    <string name="this_wheel_has_duplicated_out_of_maximum_5">This wheel has duplicated out of maximum: 5</string>
    <string name="duplicate_success">Duplicate success</string>
    <string name="top_wheel_success">Top wheel success</string>
    <string name="delete_success">Delete success</string>

</resources>