<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/ivBorderDeteleDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/viewDetele"
        app:layout_constraintTop_toTopOf="@id/viewDetele"
        app:layout_constraintEnd_toEndOf="@id/viewDetele"
        app:layout_constraintBottom_toBottomOf="@id/viewDetele"
        android:src="@drawable/img_border_edit_dialog"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewDetele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:textSize="24sp"
            android:fontFamily="@font/digitalt"/>
        <EditText
            android:id="@+id/edtContent"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start|center_vertical"
            android:lines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:paddingHorizontal="12dp"
            android:hint="@string/option_1"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/img_border_text_edit"
            android:includeFontPadding="false"
            android:textSize="16sp"
            android:fontFamily="@font/svn_gilroy"/>
        <TextView
            android:id="@+id/tvColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:layout_marginTop="12dp"
            android:text="@string/color"
            android:fontFamily="@font/svn_gilroy"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:includeFontPadding="false" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvColor"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvColor" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCancel"
            android:layout_width="120dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/clOkay"
            app:layout_constraintTop_toBottomOf="@id/rcvColor"
            android:layout_marginTop="16dp">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:paddingVertical="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/img_button_cancel" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cancel"
                android:fontFamily="@font/digitalt"
                android:textSize="24sp"
                android:textColor="#464646"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:ellipsize="end"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clOkay"
            android:layout_width="120dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/clCancel"
            app:layout_constraintTop_toBottomOf="@id/rcvColor"
            android:layout_marginTop="16dp">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:paddingVertical="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/img_button_okay" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/okay"
                android:fontFamily="@font/digitalt"
                android:textSize="24sp"
                android:textColor="#601e11"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:ellipsize="end"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>