<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/ivBorderDeteleDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/viewDetele"
        app:layout_constraintTop_toTopOf="@id/viewDetele"
        app:layout_constraintEnd_toEndOf="@id/viewDetele"
        app:layout_constraintBottom_toBottomOf="@id/viewDetele"
        android:src="@drawable/img_border_delete_dialog"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewDetele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/discard_changes"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:textSize="24sp"
            android:fontFamily="@font/digitalt"/>
        <TextView
            android:id="@+id/tvContent"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:text="@string/you_have_unsaved_changes_are_you_sure_you_want_to_discard_all"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:textSize="16sp"
            android:fontFamily="@font/svn_gilroy"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clKeep"
            android:layout_width="120dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/clDiscard"
            app:layout_constraintTop_toBottomOf="@id/tvContent"
            android:layout_marginTop="16dp">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:paddingVertical="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/img_button_okay" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/keep"
                android:fontFamily="@font/digitalt"
                android:textSize="24sp"
                android:textColor="#601e11"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:ellipsize="end"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDiscard"
            android:layout_width="120dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/clKeep"
            app:layout_constraintTop_toBottomOf="@id/tvContent"
            android:layout_marginTop="16dp">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:paddingVertical="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/img_button_cancel" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/discard"
                android:fontFamily="@font/digitalt"
                android:textSize="24sp"
                android:textColor="#464646"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:ellipsize="end"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    

</androidx.constraintlayout.widget.ConstraintLayout>