<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/ivBorderDeleteDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/viewDetele"
        app:layout_constraintTop_toTopOf="@id/viewDetele"
        app:layout_constraintEnd_toEndOf="@id/viewDetele"
        app:layout_constraintBottom_toBottomOf="@id/viewDetele"
        android:src="@drawable/img_border_delete_dialog"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewDetele"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="48dp"
            android:layout_marginTop="76dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/ivColorWin"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tvWin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/svn_gilroy"/>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHide"
            android:layout_width="120dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/clOkay"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            android:layout_marginTop="40dp">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:paddingVertical="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/img_button_hide" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/hide"
                android:fontFamily="@font/digitalt"
                android:textSize="24sp"
                android:textColor="#001d7d"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:ellipsize="end"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clOkay"
            android:layout_width="120dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/clHide"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            android:layout_marginTop="40dp">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:paddingVertical="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/img_button_okay" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/okay"
                android:fontFamily="@font/digitalt"
                android:textSize="24sp"
                android:textColor="#601e11"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:ellipsize="end"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/ivWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_winner"/>
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/ivWinner"
        app:layout_constraintEnd_toEndOf="@id/ivWinner"
        app:layout_constraintTop_toTopOf="@id/ivWinner"
        app:layout_constraintBottom_toBottomOf="@id/ivWinner"
        android:text="@string/winner"
        android:textColor="#9b321c"
        android:includeFontPadding="false"
        android:textSize="24sp"
        android:fontFamily="@font/digitalt"/>




</androidx.constraintlayout.widget.ConstraintLayout>